src/test/deca/context/invalid/or_float_or_string.deca
// Description :
// 
//      Test syntaxiquement correct de 3.0||"bonjour"
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = 3.0||"bonjour";
}